--- a/booking/templates/booking/book.html
+++ b/booking/templates/booking/book.html
@@ -1,7 +1,7 @@
 {% extends "booking/base.html" %}
 
 {% block title %}
-Реєстрація
+Бронювання
 {% endblock %}
 
 {% block content %}
@@ -121,5 +121,4 @@
         {% endif %}
     });
 </script>
-
 {% endblock %}
