--- a/booking/templates/booking/base.html
+++ b/booking/templates/booking/base.html
@@ -63,7 +63,7 @@
         {% endblock %}
     </div>
     <div class="container">
-      <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top mt-auto">
+      <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top mt-auto" style="z-index: 1; position: relative;">
         <div class="col-md-4 d-flex align-items-center">
           <a href="/" class="mb-3 me-2 mb-md-0 text-body-secondary text-decoration-none lh-1">
             <svg class="bi" width="30" height="24"><use xlink:href="#bootstrap"></use></svg>
