--- a/booking/templates/booking/create_adm.html
+++ b/booking/templates/booking/create_adm.html
@@ -83,27 +83,25 @@
         <form method="post">
             {% csrf_token %}
             <div class="form-group-my">
-                <label for="id_fullname">Прізвище та ім'я:</label>
-                {{ form.fullname }}
-            </div>
-            <div class="form-group-my">
-                <label for="id_age">Вік:</label>
-                {{ form.age }}
+                <label for="id_username">Юзернейм:</label>
+                {{ form.username }}
             </div>
             <div class="form-group-my">
                 <label for="id_email">Пошта:</label>
                 {{ form.email }}
             </div>
             <div class="form-group-my">
-                <label for="id_password">Пароль:</label>
-                {{ form.password }}
+                <label for="id_password1">Пароль:</label>
+                {{ form.password1 }}
+            </div>
+            <div class="form-group-my">
+                <label for="id_password2">Повторіть пароль:</label>
+                {{ form.password2 }}
             </div>
             <button type="submit" class=" btn btn-my m-3">Додати</button>
         </form>
     </div>
 </center>
-
-<p><a href="{% url 'create_admin' %}">Адмін</a></p>
 
 <script>
     document.addEventListener('DOMContentLoaded', function () {
