--- a/booking/templates/booking/base.html
+++ b/booking/templates/booking/base.html
@@ -42,9 +42,9 @@
           <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
             <li><a href="{% url 'home' %}" class="nav-link my-nav px-2 {% if request.path == '/' %}link-secondary{% endif %}">Головна</a></li>
             <li><a href="{% url 'hostels' %}" class="nav-link my-nav px-2 {% if request.path == '/hostels' %}link-secondary{% endif %}">Хостели</a></li>
-            <li><a href="#" class="nav-link my-nav px-2">Pricing</a></li>
+            <!-- <li><a href="#" class="nav-link my-nav px-2">Pricing</a></li>
             <li><a href="#" class="nav-link my-nav px-2">FAQs</a></li>
-            <li><a href="#" class="nav-link my-nav px-2">About</a></li>
+            <li><a href="#" class="nav-link my-nav px-2">About</a></li> -->
           </ul>
     
           <div class="col-md-3 text-end">
