--- a/booking/templates/booking/detail_hostel.html
+++ b/booking/templates/booking/detail_hostel.html
@@ -18,7 +18,7 @@
 
     {% if hostels %}
     <div>
-        <div class="alert mb-3 mt-4 p-4 rounded shadow">
+        <div class="alert mb-3 mt-4 p-4 rounded shadow" style="background-color: beige;">
                 <h2 class="alert-heading">{{ hostels.name }}</h2>
                 <h4 style="font-size: large; font-style: italic;">{{ hostels.admin }}</h4>
                 <h4 class="alert-heading">{{ hostels.adress }}</h4><hr>
@@ -26,7 +26,7 @@
         </div><hr>
         {% if room %}
             {% for i in room %}
-            <div class="alert mb-3 mt-4 p-4 rounded shadow">
+            <div class="alert mb-3 mt-4 p-4 rounded shadow" style="background-color: antiquewhite;">
                 <center><h3>№{{ i.number }}</h3></center>
                 {% if i.images.exists %}
                 <div id="roomCarousel{{ i.number }}" class="carousel slide" data-bs-ride="carousel">
@@ -72,14 +72,54 @@
             {% endfor %}
         {% else %}
         <center><h3>Нема данних про кімнати!</h3></center>
-        <center><h5 style="font-size: small;">Зачекайте, будь ласка...</h5></center>
+        <center><h5 style="font-size: small;">Зачекайте, будь ласка...</h5></center><hr>
+            {% if request.session.username %}
+            <center><a class="btn" href="{% url 'create_room' hostels.id %}" style="background-color: #71a298; color: white; width: 150px;">Додати кімнату</a></center>
+            {% endif %}
         {% endif %}
     </div>
     {% else %}
     <h3>Нажаль немає данних</h3>
     {% endif %}
-    <center><a class="btn" href="{% url 'create_room' hostels.id %}" style="background-color: #71a298; color: white; width: 150px;">Додати кімнату</a></center>
-    <a href="{% url 'hostels' %}" class="btn" style="background-color: #71a298; color: white; width: 100px;">Назад</a>
+    <center><h4>Коментарі</h4></center>
+    {% if request.session.client_name %}
+        <divc lass="alert mb-3 mt-4 p-4 rounded shadow">
+            {% if comments %}
+            <ul>
+                {% for commen in comments %}
+                <li>
+                    <strong>{{ commen.client }}:</strong>
+                    {{ commen.comment }}<p style="font-size: small;">{{ commen.comment_date }}</p>
+                    {% if request.session.username %}
+                        <a href="{% url 'del_comment' commen.id %}"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-trash3" viewBox="0 0 16 16">
+                            <path d="M6.5 1h3a.5.5 0 0 1 .5.5v1H6v-1a.5.5 0 0 1 .5-.5M11 2.5v-1A1.5 1.5 0 0 0 9.5 0h-3A1.5 1.5 0 0 0 5 1.5v1H1.5a.5.5 0 0 0 0 1h.538l.853 10.66A2 2 0 0 0 4.885 16h6.23a2 2 0 0 0 1.994-1.84l.853-10.66h.538a.5.5 0 0 0 0-1zm1.958 1-.846 10.58a1 1 0 0 1-.997.92h-6.23a1 1 0 0 1-.997-.92L3.042 3.5zm-7.487 1a.5.5 0 0 1 .528.47l.5 8.5a.5.5 0 0 1-.998.06L5 5.03a.5.5 0 0 1 .47-.53Zm5.058 0a.5.5 0 0 1 .47.53l-.5 8.5a.5.5 0 1 1-.998-.06l.5-8.5a.5.5 0 0 1 .528-.47M8 4.5a.5.5 0 0 1 .5.5v8.5a.5.5 0 0 1-1 0V5a.5.5 0 0 1 .5-.5"/>
+                          </svg></a>
+                    {% endif %}
+                </li>
+                {% endfor %}
+            </ul>
+            {% else %}
+            <p>Поки, що нема коментарів</p>
+            {% endif %}
+            <br>
+            <div class="d-flex flex-wrap gap-3 justify-content-start">
+                <div class="card mb-3 mt-4 p-4 rounded shadow" style="width: 500px;">
+                    <form method="post">
+                        {% csrf_token %}
+                        {{form.comment}}
+                        <button type="submit" class="btn mt-4" style="background-color: #71a298; color: white;">Додати</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+    {% else %}
+    <center><p>Зареєструйтесь будь ласка...</p></center>
+    <center><a href="{% url 'client' %}" style="text-decoration: none;">Зареєструватись</a></center>
+    {% endif %}
+    <div class="container">
+        <a href="{% url 'hostels' %}" class="btn mb-3" style="background-color: #71a298; color: white; width: 100px;">Назад</a>
+
+    </div>
 {% endblock %}
 
 
