--- a/booking/templates/booking/hostels.html
+++ b/booking/templates/booking/hostels.html
@@ -1,6 +1,6 @@
 {% extends "booking/base.html" %}
 
-{% block title %}Хостели{% endblock %}
+{% block title %}Готелі{% endblock %}
 
 {% block content %}
     {% if hostel %}
