new interface and new page

--- a/booking/templates/booking/base.html
+++ b/booking/templates/booking/base.html
@@ -41,7 +41,7 @@
         <header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4 border-bottom">
           <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
             <li><a href="{% url 'home' %}" class="nav-link my-nav px-2 {% if request.path == '/' %}link-secondary{% endif %}">Головна</a></li>
-            <li><a href="{% url 'hostels' %}" class="nav-link my-nav px-2 {% if request.path == '/hostels' %}link-secondary{% endif %}">Хостели</a></li>
+            <li><a href="{% url 'hostels' %}" class="nav-link my-nav px-2 {% if request.path == '/hostels' %}link-secondary{% endif %}">Готелі</a></li>
             <!-- <li><a href="#" class="nav-link my-nav px-2">Pricing</a></li>
             <li><a href="#" class="nav-link my-nav px-2">FAQs</a></li>
             <li><a href="#" class="nav-link my-nav px-2">About</a></li> -->
