--- a/booking/templates/booking/detail_hostel.html
+++ b/booking/templates/booking/detail_hostel.html
@@ -1,6 +1,6 @@
 {% extends "booking/base.html" %}
 
-{% block title %}Хостели{% endblock %}
+{% block title %}{{ hostels.name }}{% endblock %}
 
 {% block content %}
 
