--- a/booking/templates/booking/hostels.html
+++ b/booking/templates/booking/hostels.html
@@ -13,7 +13,11 @@
         {% endfor %}
     </div>
     {% else %}
-        <h3>Нажаль немає данних</h3>
+        <div class="text-center mt-4">
+            <h3>Нажаль немає данних</h3>
+            <p>Ми працюємо над оновленням.</p>
+            <img src="media/media/no-data.png" alt="No data" style="max-width: 300px; margin-top: 20px;">
+        </div>
     {% endif %}
     {% if request.session.username %}
     <center>
