--- a/booking/templates/booking/hostels.html
+++ b/booking/templates/booking/hostels.html
@@ -21,7 +21,7 @@
     {% endif %}
     {% if request.session.username %}
     <center>
-        <p class="btn" style="background-color: #71a298; color: white;"><a href="{% url 'new_hotel' %}" style="text-decoration: none; color: inherit;">Додати готель</a></p>
+        <p class="btn mt-4" style="background-color: #71a298; color: white;"><a href="{% url 'new_hotel' %}" style="text-decoration: none; color: inherit;">Додати готель</a></p>
     </center>
     {% endif %}
     
